tests/compile_fail/borrow/unknown_struct_attr_arg.rs
#[derive(derive_more::Borrow)]
#[borrow(baz)]
struct Foo {
    bar: i32,
}

fn main() {}
